# aarm

./: LICENSE  README.md
aarm_brain/: CMakeLists.txt  package.xml  requirements.txt
aarm_brain/src/: trainBrain.py
aarm_control/: CMakeLists.txt  package.xml
aarm_control/config/: aarm_control.yaml
aarm_control/launch/: aarm_control.launch  aarm_rqt.launch
aarm_description/: CMakeLists.txt  package.xml
aarm_description/launch/: aarm.rviz  aarm_rviz.launch
aarm_description/urdf/: aarm.urdf  aarm_moveit.urdf
aarm_gazebo/: CMakeLists.txt  package.xml
aarm_gazebo/launch/: aarm_world.launch
aarm_gazebo/worlds/: aarm.world
aarm_moveit/: .setup_assistant  CMakeLists.txt  package.xml
aarm_moveit/config/: aarm.srdf  fake_controllers.yaml  joint_limits.yaml  kinematics.yaml  ompl_planning.yaml  ros_controllers.yaml
aarm_moveit/launch/: aarm_moveit_controller_manager.launch.xml  chomp_planning_pipeline.launch.xml  default_warehouse_db.launch  demo.launch  demo_gazebo.launch  fake_moveit_controller_manager.launch.xml  gazebo.launch  move_group.launch  moveit.rviz  ompl_planning_pipeline.launch.xml  planning_context.launch  planning_pipeline.launch.xml  ros_controllers.launch  run_benchmark_ompl.launch  sensor_manager.launch.xml  setup_assistant.launch  trajectory_execution.launch.xml  warehouse.launch
aarm_moveit/src/: trajectory.py
